# nssu-sys

./: .env.example  .gitignore  .pre-commit-config.yaml  COMPREHENSIVE.md  Procfile  README.md  conftest.py  manage.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt
.github/workflows/: ci.yml
accounts/: __init__.py  admin.py  apps.py  athlete_import.py  forms.py  middleware.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_add_ncg_standard_time_nationality.py  0003_add_user_registration_fields.py  (+4 more)
competitions/: __init__.py  admin.py  models.py  tests.py  urls.py  views.py
docs/: API.md  AUDIT_REPORT.md  BACKUP.md  IMPLEMENTATION_REPORT.md  TODO.md  システム完全ガイド.md  データ管理ガイド.md  本番運用ガイド.md  負荷テストガイド.md
entries/: __init__.py  admin.py  api_urls.py  api_views.py  excel_import.py  forms.py  models.py  tests.py  urls.py  views.py
heats/: __init__.py  admin.py  models.py  tests.py  urls.py  views.py
news/: admin.py  models.py  tests.py  urls.py  views.py
nitsys/: asgi.py  constants.py  error_handlers.py  settings.py  urls.py  validators.py  views.py  wsgi.py
payments/: __init__.py  admin.py  forms.py  models.py  notifications.py  parking_import.py  receipt_generator.py  tests.py  urls.py  views.py
reports/: __init__.py  admin.py  generators.py  models.py  tests.py  urls.py  views.py
scripts/: backup_db.sh  create_325th_competition.py  create_test_athletes.py  locustfile.py  restore_db.sh
templates/: base.html  index.html
tests/: __init__.py  test_critical_flows.py  test_integration.py
(+80 files in other folders)
