[project]
name = "nit-sys"
version = "1.0.0"
description = "日本体育大学長距離競技会 エントリー・運営管理システム"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
    "staticfiles",
    "scripts",  # django.setup()後のインポートが必要なため除外
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "DJ",  # flake8-django
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["accounts", "competitions", "entries", "payments", "heats", "reports", "news", "nitsys"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "nitsys.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
    "venv/*",
    "manage.py",
    "conftest.py",
    "*/admin.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
